--- a/site/index.html
+++ b/site/index.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-
-Name       : Veridical 
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20131203
-
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Roberto Gomes - Developer</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="keywords" content="RobertoJr_Dev Roberto jr junior dev programmer Gomes" />
+<meta name="description" content="Roberto Gomes portfolio site - game developer" />
 <link href="http://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700,900" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -30,8 +19,6 @@ Released   : 20131203
 <meta name="msapplication-config" content="/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
-<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
-
 </head>
 <body>
 <div id="wrapper1">
@@ -44,26 +31,11 @@ Released   : 20131203
 
 			<div id="portfolio" class="container">
 				<div class="pbox1">
-					<div class="column1">
-						<div class="box"> <a href="mailto: me@robertojr.dev" target="_self" rel="noopener" > <span class="icon icon-envelope-alt"></span></a>
-						</div>
-					</div>
-					<div class="column2">
-						<div class="box"><a href="https://www.linkedin.com/in/robertogomesjr/" target="_blank" rel="noopener" ><span class="icon icon-linkedin"></span></a>
-						</div>
-					</div>
-					<div class="column3">
-						<div class="box"><a href="https://twitter.com/RobertoJr_Dev" target="_blank" rel="noopener" ><span class="icon icon-twitter"></span></a>
-						</div>
-					</div>
-					<div class="column4">
-						<div class="box"><a href="https://github.com/robertojrdev" target="_blank" rel="noopener" > <span class="icon icon-github"></span></a>
-						</div>
-					</div>
-					<div class="column5">
-						<div class="box"><a href="https://pt.stackoverflow.com/users/53929/roberto-gomes" target="_blank" rel="noopener" > <span class="icon icon-stack-overflow"></span></a>
-						</div>
-					</div>
+						<div class="box"> <a href="mailto: me@robertojr.dev" target="_self" rel="noopener" > <span class="icon icon-envelope-alt"></span></a></div>
+						<div class="box"><a href="https://www.linkedin.com/in/robertogomesjr/" target="_blank" rel="noopener" ><span class="icon icon-linkedin"></span></a></div>
+						<div class="box"><a href="https://twitter.com/RobertoJr_Dev" target="_blank" rel="noopener" ><span class="icon icon-twitter"></span></a></div>
+						<div class="box"><a href="https://github.com/robertojrdev" target="_blank" rel="noopener" > <span class="icon icon-github"></span></a></div>
+						<div class="box"><a href="https://pt.stackoverflow.com/users/53929/roberto-gomes" target="_blank" rel="noopener" > <span class="icon icon-stack-overflow"></span></a></div>
 				</div>
 			</div>
 	</div>
