--- a/site/index.html
+++ b/site/index.html
@@ -21,26 +21,19 @@
 
 </head>
 <body>
-<div id="wrapper1">
-	<div id="welcome" class="container">
-		<div class="title">
-			<h2><span style="color:#3fe4b0">//</span> Roberto Gomes</h2>
-			<span class="byline">< indie game developer / programmer / extended reality enthusiast ></span> </div>
-			<h3>This site is still in development</h3>
-			<span class="byline2">Contact me</span>
+	<div class="wrapper">
+		<h2><span class="themeColor">//</span> Roberto Gomes</h2>
+		<span class="byline">< indie game developer / programmer / extended reality enthusiast ></span>
+		<h3>This site is still in development</h3>
+		<span class="byline2">Contact me</span>
 
-			<div id="portfolio" class="container">
-				<div class="pbox1">
-						<div class="box"> <a href="mailto: me@robertojr.dev" target="_self" rel="noopener" > <span class="icon icon-envelope-alt"></span></a></div>
-						<div class="box"><a href="https://www.linkedin.com/in/robertogomesjr/" target="_blank" rel="noopener" ><span class="icon icon-linkedin"></span></a></div>
-						<div class="box"><a href="https://twitter.com/RobertoJr_Dev" target="_blank" rel="noopener" ><span class="icon icon-twitter"></span></a></div>
-						<div class="box"><a href="https://github.com/robertojrdev" target="_blank" rel="noopener" > <span class="icon icon-github"></span></a></div>
-						<div class="box"><a href="https://pt.stackoverflow.com/users/53929/roberto-gomes" target="_blank" rel="noopener" > <span class="icon icon-stack-overflow"></span></a></div>
-				</div>
-			</div>
+		<div class="icon-container">
+			<div class="box"> <a href="mailto: me@robertojr.dev" target="_self" rel="noopener" > <span class="icon icon-envelope-alt"></span></a></div>
+			<div class="box"><a href="https://www.linkedin.com/in/robertogomesjr/" target="_blank" rel="noopener" ><span class="icon icon-linkedin"></span></a></div>
+			<div class="box"><a href="https://twitter.com/RobertoJr_Dev" target="_blank" rel="noopener" ><span class="icon icon-twitter"></span></a></div>
+			<div class="box"><a href="https://github.com/robertojrdev" target="_blank" rel="noopener" > <span class="icon icon-github"></span></a></div>
+			<div class="box"><a href="https://pt.stackoverflow.com/users/53929/roberto-gomes" target="_blank" rel="noopener" > <span class="icon icon-stack-overflow"></span></a></div>
+		</div>
 	</div>
-</div>
-
-
 </body>
 </html>
