--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 <title>Roberto Gomes - Developer</title>
 <meta name="keywords" content="RobertoJr_Dev Roberto jr junior dev programmer Gomes" />
 <meta name="description" content="Roberto Gomes portfolio site - game developer" />
-<link href="http://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700,900" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700,900" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
