Projects changed and button added

--- a/site/index.html
+++ b/site/index.html
@@ -92,7 +92,7 @@
           <h2 class="mt-0">About Me</h2>
           <hr class="divider my-4">
           <p class="text-black-75 mb-4">I'm an indie game developer, programmer, extended reality enthusiast and
-            coursing Game Development with two years experience in making games. ​
+            coursing Game Development with three years experience in making games. ​
           </p>
           <p class="text-black-75 mb-4">
             I have worked in projects on many platforms as PC, mobile, and virtual reality, on different kinds of
@@ -107,15 +107,27 @@
       </div>
     </div>
   </section>
-
+  
   <!-- Portfolio Section -->
   <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://oxstudio.itch.io/neokai">
+            <img class="img-fluid" src="https://img.itch.zone/aW1nLzIyNTE1ODcucG5n/315x250%23c/SfNqdG.png"
+              alt="">
+            <div class="portfolio-box-caption p-3">
+              <h4>OX Studio - University Project</h4>
+              <div class="project-name">
+                Neokai
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://oxstudio.itch.io/capture">
             <img class="img-fluid" src="https://img.itch.zone/aW1hZ2UvMzAyNjMxLzE0ODE3NjQucG5n/315x250%23c/SJXw%2F8.png"
-              alt="">
+            alt="">
             <div class="portfolio-box-caption">
               <h4>OX Studio</h4>
               <div class="project-name">
@@ -170,18 +182,9 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://robertojr-dev.itch.io/the-hallway">
-            <img class="img-fluid" src="https://img.itch.zone/aW1hZ2UvMjUxNzU5LzEyNTQyNjQuanBn/315x250%23c/I1SLon.jpg"
-              alt="">
-            <div class="portfolio-box-caption p-3">
-              <h4>OX Studio - University Project</h4>
-              <div class="project-name">
-                The Hallway
-              </div>
-            </div>
-          </a>
-        </div>
+      </div>
+      <div class="col-md-12 text-center mt-5">
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://robertojr-dev.itch.io/">Find out more projects</a>
       </div>
     </div>
   </section>
