Added videos on hover to portfolio thumbs

--- a/site/index.html
+++ b/site/index.html
@@ -116,11 +116,9 @@
           <a class="portfolio-box" href="https://oxstudio.itch.io/neokai">
             <img class="img-fluid" src="https://img.itch.zone/aW1nLzIyNTE1ODcucG5n/315x250%23c/SfNqdG.png"
               alt="">
-            <div class="portfolio-box-caption p-3">
-              <h4>OX Studio - University Project</h4>
-              <div class="project-name">
-                Neokai
-              </div>
+            <div class="portfolio-box-caption">
+                <video playsinline autoplay muted loop class="img-fluid" src="img/gifs/Neokai_Trailer.mp4"
+                alt="">Your browser does not suport HTML5 videos</video>
             </div>
           </a>
         </div>
@@ -129,25 +127,21 @@
             <img class="img-fluid" src="https://img.itch.zone/aW1hZ2UvMzAyNjMxLzE0ODE3NjQucG5n/315x250%23c/SJXw%2F8.png"
             alt="">
             <div class="portfolio-box-caption">
-              <h4>OX Studio</h4>
-              <div class="project-name">
-                Capture
-              </div>
+                <video playsinline autoplay muted loop class="img-fluid" src="img/gifs/Capture_Trailer_final.mp4"
+                alt="">Your browser does not suport HTML5 videos</video>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://oxstudio.itch.io/define-home">
-            <img class="img-fluid" src="https://img.itch.zone/aW1nLzE4MTQwNTUuanBn/315x250%23c/t%2Fqawk.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <h4>OX Studio - Game Jam</h4>
-              <div class="project-name">
-                Define Home
-              </div>
+          <a class="portfolio-box" href="https://oxstudio.itch.io/late-again">
+            <img class="img-fluid" src="https://img.itch.zone/aW1nLzIyNTE2NDgucG5n/315x250%23c/%2FwTV2N.png" alt="">
+            <div class="portfolio-box-caption"></video>
+                <video playsinline autoplay muted loop class="img-fluid" src="img/gifs/LateAgain_Trailer.mp4"
+                alt="">Your browser does not suport HTML5 videos</video>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <!-- <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://robertojr-dev.itch.io/the-life-goes-on">
             <img class="img-fluid" src="https://img.itch.zone/aW1nLzE2ODgwNDUucG5n/315x250%23c/lqydxt.png" alt="">
             <div class="portfolio-box-caption">
@@ -181,7 +175,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
       </div>
       <div class="col-md-12 text-center mt-5">
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://robertojr-dev.itch.io/">Find out more projects</a>
