--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2" id="mainNav">
     <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -111,8 +111,8 @@
   <!-- Portfolio Section -->
   <section id="portfolio">
     <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
+      <div class="row no-gutters justify-content-md-center justify-content-sm-center">
+        <div class="col-lg-4 col-sm-7">
           <a class="portfolio-box" href="https://oxstudio.itch.io/neokai">
             <img class="img-fluid" src="https://img.itch.zone/aW1nLzIyNTE1ODcucG5n/315x250%23c/SfNqdG.png"
               alt="">
@@ -122,7 +122,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-7">
           <a class="portfolio-box" href="https://oxstudio.itch.io/capture">
             <img class="img-fluid" src="https://img.itch.zone/aW1hZ2UvMzAyNjMxLzE0ODE3NjQucG5n/315x250%23c/SJXw%2F8.png"
             alt="">
@@ -132,7 +132,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-7">
           <a class="portfolio-box" href="https://oxstudio.itch.io/late-again">
             <img class="img-fluid" src="https://img.itch.zone/aW1nLzIyNTE2NDgucG5n/315x250%23c/%2FwTV2N.png" alt="">
             <div class="portfolio-box-caption"></video>
@@ -188,43 +188,43 @@
     <div class="container">
       <h2 class="text-center mt-0">Awards</h2>
       <hr class="divider my-4">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 text-center">
+      <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/award-press.png">
             <h3 class="h4 mb-2 text-uppercase">Press Award</h3>
             <p class="text-muted mb-0 text-capitalize">Playstation Awards</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/award-best-use.png">
             <h3 class="h4 mb-2 text-uppercase">best use of playstation platform</h3>
             <p class="text-muted mb-0 text-capitalize">Playstation Awards</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/award-best-game.png">
             <h3 class="h4 mb-2 text-uppercase">Best Game</h3>
             <p class="text-muted mb-0 text-capitalize">Comic-Con Portugal</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/nominee-best-game.png">
             <h3 class="h4 mb-2 text-uppercase">Best Game Of The Year</h3>
             <p class="text-muted mb-0 text-capitalize">Playstation Awards</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/nominee-best-art.png">
             <h3 class="h4 mb-2 text-uppercase">Best Art</h3>
             <p class="text-muted mb-0 text-capitalize">Playstation Awards</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-10 text-center">
           <div class="mt-5">
             <img class="fas fa-4x text-primary mb-4 award-icon" src="img/awards/nominee-finalist.png">
             <h3 class="h4 mb-2 text-uppercase">Finalist</h3>
