updated about me

--- a/site/index.html
+++ b/site/index.html
@@ -88,21 +88,54 @@
   <section class="page-section " id="about">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-10 text-center">
+        <div class="col-lg-8 text-center">
           <h2 class="mt-0">About Me</h2>
           <hr class="divider my-4">
-          <p class="text-black-75 mb-4">I'm an indie game developer, programmer, extended reality enthusiast and
-            coursing Game Development with three years experience in making games. ​
+          <p class="text-black-75 mb-4">I'm an game developer, programmer, extended reality enthusiast and
+            graduated in Game Development with four years of professional experience in making games. ​
           </p>
           <p class="text-black-75 mb-4">
-            I have worked in projects on many platforms as PC, mobile, and virtual reality, on different kinds of
-            projects like, gamification, serious games, diseases treatment, VR tours/experiences, and of course general
-            games.
+            I have worked in projects on many platforms as PC, mobile, web, and extended reality, on different kinds of projects like, gamification, 
+            serious games, diseases treatment, VR and AR experiences, and of course general games.
           </p>
-          <p class="text-black-75 mb-4">
-            Currently working at OX Studio on Neokai, at Lusofona University as psychology monitor, and finishing my
-            degree in video games, also working as freelancer. ​
-          </p>
+        </div>
+        <div class="row justify-content-center mt-4" style="max-width: 100%; margin: auto;">
+          <div class="lang-icon">
+            <div class="i-unity" style="height: 40px;"></div>
+            <h6 class="text-black-50 mt-1">Unity</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-csharp"></div>
+            <h6 class="text-black-50 mt-1">C Sharp</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-c"></div>
+            <h6 class="text-black-50 mt-1">C</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-java"></div>
+            <h6 class="text-black-50 mt-1">JAVA</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-python"></div>
+            <h6 class="text-black-50 mt-1">Python</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-js"></div>
+            <h6 class="text-black-50 mt-1">JavaScript</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-html"></div>
+            <h6 class="text-black-50 mt-1">HTML5</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-css"></div>
+            <h6 class="text-black-50 mt-1">CSS</h6>
+          </div>
+          <div class="lang-icon">
+            <div class="i-flutter"></div>
+            <h6 class="text-black-50 mt-1">Flutter</h6>
+          </div>
         </div>
       </div>
     </div>
@@ -276,6 +309,7 @@
 
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - Roberto Gomes</div>
+      <div class="small text-center text-muted"><a href="go.html">//</a></div>
     </div>
   </footer>
 
